--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
     - name: Obtendo o código
       uses: actions/checkout@v6.0.1
       
-    # - name: Docker Login
-    #   uses: docker/login-action@v3.6.0
-    #   with:
-    #     username: ${{secrets.DOCKERHUB_USER}}
-    #     password: ${{secrets.DOCKERHUB_PWD}}
+    - name: Docker Login
+      uses: docker/login-action@v3.6.0
+      with:
+        username: ${{secrets.DOCKERHUB_USER}}
+        password: ${{secrets.DOCKERHUB_PWD}}
 
     - name: Construção da imagem Docker worker
       uses: Docker/build-push-action@v6.18.0
