--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         file: ./src/Dockerfile
         push: true
         tags: |
-          aluiziodiniz/kube-news:${{github.run_number}}
-          aluiziodiniz/kube-news:latest    
+          aluiziod/kube-news:${{github.run_number}}
+          aluiziod/kube-news:latest    
