--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,8 @@ jobs:
         WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
 
     - name: Run wiz-cli docker image scan
-      run: ./wizcli docker scan --image $TAG --policy "$POLICY"
+      run: ./wizcli docker scan --image aluiziod/kube-news:latest --policy "$POLICY"
 
     - name: Fetch digest of Docker image for Graph enrichment
-      run: ./wizcli docker tag --image $TAG
+      run: ./wizcli docker tag --image aluiziod/kube-news:latest 
 
